--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -6,31 +6,33 @@ on:
   pull_request:
     branches: [ "main" ]
 
-# This part is intentional and needs to be scanned for exposed secrets.
 env:
   DOCKER_REGISTRY: brenesrm
   IMAGE_NAME: devsecops-nyit-van
-  PASSWORD: "PuraVida!"
 
 jobs:
-    check-secrets:
-       name: Secrets Management Analysis
-       needs: dockertest
-       runs-on: ubuntu-24.04
-       steps:
-         - name: Checkout Repo
-           uses: actions/checkout@v3
-    
-         - name: Install Detect Secrets
-           run: pip install detect-secrets  # Ensure detect-secrets is installed
-    
-         - name: Generate Secrets Baseline (if missing)
-           run: |
-             if [ ! -f ".secrets.baseline" ]; then
-               detect-secrets scan > .secrets.baseline
-             fi
-    
-         - name: Secret Scanner
-           run: detect-secrets scan --baseline .secrets.baseline || true  # Allow process to continue
-    
+  check-secrets:
+    name: Secrets Management Analysis
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v4
 
+      - name: Install Detect Secrets
+        run: pip install detect-secrets  # Ensure detect-secrets is installed
+
+      - name: Generate Secrets Baseline (if missing)
+        run: |
+          if [ ! -f ".secrets.baseline" ]; then
+            detect-secrets scan > .secrets.baseline
+          fi
+
+      - name: Secret Scanner
+        run: detect-secrets scan --baseline .secrets.baseline || true  # Allow process to continue
+
+      - name: Save Secrets Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: secrets-scan-report
+          path: .secrets.baseline
+          retention-days: 30
