--- a/.github/workflows/secret.yaml
+++ b/.github/workflows/secret.yaml
@@ -30,6 +30,15 @@ jobs:
       - name: Secret Scanner
         run: detect-secrets scan --baseline .secrets.baseline || true  # Allow process to continue
 
+      - name: Check and Upload Secrets Report
+        run: |
+          if [ -f ".secrets.baseline" ]; then
+            echo "Secrets baseline file found. Uploading..."
+          else
+            echo "No secrets baseline file found! Exiting..."
+            exit 1
+          fi
+
       - name: Save Secrets Report
         uses: actions/upload-artifact@v4
         with:
