--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -157,26 +157,34 @@ jobs:
 
   dast:
     name: ZAP - DAST Test
-    needs: dockertest  # Ensures the Docker image is built first
+    needs: AI_Security_Review
     runs-on: ubuntu-latest
     permissions:
-      issues: write  # Required for GitHub to log security issues
+      issues: write
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Start the web application before scanning
-      - name: Start Web API
-        run: |
-          npm install
-          npm run dev &
-          sleep 10  # Wait for the server to initialize
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-      # Run ZAP API Scan
-      - name: ZAP Scan
+      - name: Install Dependencies
+        run: |
+          pip install -r requirements.txt  # Ensure dependencies are installed
+
+      - name: Start Flask App
+        run: |
+          python app.py &
+          sleep 10  # Give Flask time to start
+
+      - name: Check if Flask is Running
+        run: curl -I http://localhost:5000 || exit 1  # Ensure server is running
+
+      - name: Run ZAP DAST Scan
         uses: zaproxy/action-api-scan@v0.7.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          target: 'http://10.0.0.10:30081/'
-        
+          target: 'http://localhost:5000/xss'  # Test the XSS endpoint (update as needed)
