--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -72,12 +72,15 @@ jobs:
       - name: Check if Flask is Running
         run: curl -I http://localhost:5000 || exit 1  # Ensure server is running
 
-      - name: Run ZAP DAST Scan
-        uses: zaproxy/action-api-scan@v0.7.0
-        continue-on-error: true
+      - name: ZAP Baseline Scan
+        uses: zaproxy/action-baseline@v0.7.0
         with:
+          target: 'http://localhost:5000'
           token: ${{ secrets.GITHUB_TOKEN }}
-          target: 'http://localhost:5000/xss'  # Change this to test different endpoints
-          format: 'sarif'
-          output: 'zap-results.sarif'
+          rules_file_name: '.zap/rules.tsv'  # Optional: Define custom rules
+          format: 'sarif'  # Generates a SARIF report for GitHub Security tab
+          issue_title: 'ZAP Security Scan Findings'
+          allow_issue_writing: true
+          fail_action: false  # Prevent pipeline from failing
+      
     
