--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -77,10 +77,11 @@ jobs:
         with:
           target: 'http://localhost:5000'
           token: ${{ secrets.GITHUB_TOKEN }}
-          rules_file_name: '.zap/rules.tsv'  # Optional: Define custom rules
-          format: 'sarif'  # Generates a SARIF report for GitHub Security tab
           issue_title: 'ZAP Security Scan Findings'
           allow_issue_writing: true
-          fail_action: false  # Prevent pipeline from failing
+          fail_action: false  # Prevents pipeline failure
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'  # ✅ Correct Docker image
+          rules_file_name: ''  # ❌ Remove rules file if not available
+      
       
     
