--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -78,8 +78,16 @@ jobs:
       - name: Check if Flask is Running
         run: curl -I http://localhost:5000 || exit 1  # Ensure server is running
 
-      - name: ZAP Scan
+      - name: ZAP Baseline Scan
         uses: zaproxy/action-api-scan@v0.7.0
+        with:
+          target: 'http://localhost:5000'
+          token: ${{ secrets.GITHUB_TOKEN }}
+          issue_title: 'ZAP Security Scan Findings'
+          allow_issue_writing: true
+          fail_action: false  # Prevents pipeline failure
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'  # ✅ Correct Docker image
+          rules_file_name: ''  # ❌ Remove rules file if not available
       
       
     
