--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -49,17 +49,17 @@ jobs:
       - name: Verify Docker image
         run: |
           docker pull ${{ env.DOCKER_REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-
   dast:
     name: ZAP - DAST Test
     runs-on: ubuntu-latest
     permissions:
       issues: write
-      security-events: write  # Allow reporting security issues
+      security-events: write
+      actions: write  # Needed for artifact upload
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4  # Updated to latest version
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -68,26 +68,37 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install -r requirements.txt  # Ensure dependencies are installed
+          pip install -r requirements.txt
 
       - name: Start Flask App
         run: |
           python app.py &
-          sleep 10  # Give Flask time to start
+          for i in {1..15}; do
+            if curl -sSf http://localhost:5000 >/dev/null; then
+              echo "Flask app is running!"
+              exit 0
+            fi
+            sleep 2
+          done
+          echo "Flask app failed to start"
+          exit 1
 
-      - name: Check if Flask is Running
-        run: curl -I http://localhost:5000 || exit 1  # Ensure server is running
-
-      - name: ZAP Baseline Scan
-        uses: zaproxy/action-api-scan@v0.7.0
+      - name: Run ZAP Full Scan  # More comprehensive than baseline
+        uses: zaproxy/action-full-scan@v0.10.0  # Updated to latest version
         with:
           target: 'http://localhost:5000'
           token: ${{ secrets.GITHUB_TOKEN }}
           issue_title: 'ZAP Security Scan Findings'
-          allow_issue_writing: true
-          fail_action: false  # Prevents pipeline failure
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'  # ✅ Correct Docker image
-          rules_file_name: ''  # ❌ Remove rules file if not available
-      
+          container: 'ghcr.io/zaproxy/zaproxy:stable'
+          cmd_options: '-I'  # Ignore warning rules
+          
+      - name: Upload Scan Reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: zap-scan-results  # Hyphens instead of underscores
+          path: |
+            report_json.json
+            report_md.md
+            report_html.html      
       
     
