--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -76,10 +76,16 @@ jobs:
           sleep 10  # Give Flask time to start
 
       - name: Check if Flask is Running
-        run: curl -I http://10.1.0.70:5000/  || exit 1  # Ensure server is running
+        run: curl -I http://localhost:5000 || exit 1  # Ensure server is running
 
       - name: Run ZAP Full Scan  # More comprehensive than baseline
         uses: zaproxy/action-full-scan@v0.10.0  # Updated to latest version
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          target: 'http://localhost:5000/ '  # Ensure the full target URL is specified here
+          issue_title: 'ZAP Security Full Scan Findings'
+          fail_action: false  # Prevents pipeline failure in case of issues
+          allow_issue_writing: true
 
       
     
