--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -73,7 +73,7 @@ jobs:
 
       - name: Start Flask App
         run: |
-          python app.py &
+          python app.py &  # Run Flask in the background
           sleep 10  # Give Flask time to start
 
       - name: Check if Flask is Running
@@ -83,10 +83,18 @@ jobs:
         uses: zaproxy/action-full-scan@v0.10.0  # Updated to latest version
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          target: 'http://localhost:5000/ '  # Ensure the full target URL is specified here
+          target: 'http://localhost:5000'  # Fixed target URL (removed extra space)
           issue_title: 'ZAP Security Full Scan Findings'
           fail_action: false  # Prevents pipeline failure in case of issues
           allow_issue_writing: true
+          artifact_name: zap-scan-report  # Ensure artifact name is valid
+
+      - name: Upload ZAP Scan Artifact  # To upload the results as an artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: zap-scan-report  # Valid artifact name
+          path: /path/to/zap/reports  # Path where ZAP reports are saved
+
 
       
     
