--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -87,7 +87,7 @@ jobs:
           issue_title: 'ZAP Security Full Scan Findings'
           fail_action: false  # Prevents pipeline failure in case of issues
           allow_issue_writing: true
-          artifact_name: zap-scan-report  # Ensure artifact name is valid
+          #artifact_name: zap-scan-report  # Ensure artifact name is valid
 
       - name: Upload ZAP Scan Artifact  # To upload the results as an artifact
         uses: actions/upload-artifact@v4
