--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -200,28 +200,23 @@ jobs:
           name: zap-scan-report
           path: ./zap/reports
 
-  CodeScan:
+  CodeScanAI:
     needs: build
-    permissions:
-      contents: read # for actions/checkout to fetch code
-      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
-      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     runs-on: ubuntu-latest
+
     steps:
-        -   name: Checkout repository
-            uses: actions/checkout@v4
-        -   name: Cache files
-            uses: actions/cache@v3
-            with:
-                path: |
-                    ~/.sonar
-                key: ${{ runner.os }}-sonar
-                restore-keys: ${{ runner.os }}-sonar
-        -   name: Run Analysis
-            uses: codescan-io/codescan-scanner-action@5b2e8c5683ef6a5adc8fa3b7950bb07debccce12
-            with:
-                login: ${{ secrets.CODESCAN_AUTH_TOKEN }}
-        -   name: Upload SARIF file
-            uses: github/codeql-action/upload-sarif@v3
-            with:
-                sarif_file: codescan.sarif
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run CodeScanAI Action
+        id: codescan-ai
+        uses: codescan-ai/codescanai-action@v1.0.1
+        env:
+          OPENAI_API_KEY: ${{ secrets.CODESCAN_AUTH_TOKEN }}
+        with:
+          provider: "openai"
+          changes_only: true
+          pr_number: ${{ github.event.pull_request.number }}
+          repo: ${{ github.repository }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          output_file: "codescanai_report.txt"
