--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -201,23 +201,84 @@ jobs:
           path: ./zap/reports
 
   CodeScanAI:
-      needs: dockertest
-      runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
 
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
+      # Use the codescanai-action to generate a CodeScanAI report.
+      - name: Run CodeScanAI Action
+        id: codescan-ai
+        uses: codescan-ai/codescanai-action@v1.0.1
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        with:
+          provider: "openai"
+          changes_only: true
+          pr_number: ${{ github.event.pull_request.number }}
+          repo: ${{ github.repository }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          output_file: "codescanai_report.txt"
 
-        - name: Run CodeScanAI Action
-          id: codescan-ai
-          uses: codescan-ai/codescanai-action@v1.0.1
-          env:
-            OPENAI_API_KEY: ${{ secrets.CODESCAN_AUTH_TOKEN }}
-          with:
-            provider: "openai"
-            changes_only: true
-            pr_number: ${{ github.event.pull_request.number || 0 }}  # Fallback to 0 if pr_number is unavailable
-            repo: ${{ github.repository }}
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            output_file: "codescanai_report.txt"
+      - name: Check CodeScanAI report exist
+        shell: bash
+        run: |
+          codescanai_report_file="codescanai_report.txt"
+
+          # Check if the output file exists and is not empty
+          if [[ ! -s "$codescanai_report_file" ]]; then
+            echo "No output detected from CodeScanAI action."
+            exit 1
+          fi
+
+          echo "CodeScanAI action produced output successfully."
+
+      - name: Comment CodeScanAI Output to PR
+        uses: actions/github-script@v7
+        if: ${{ github.event_name == 'pull_request' }}
+        with:
+          script: |
+            const fs = require('fs');
+            const output = fs.readFileSync('codescanai_report.txt', 'utf8');
+
+            const {data: comments} = await github.rest.issues.listComments({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+            })
+            const botComment = comments.find(comment => {
+                return comment.user.type === 'Bot' && comment.body.includes('CodeScanAI Report')
+            })
+
+            const commentBody = `## CodeScanAI Report\n\n<details><summary>View Results</summary>\n\n${output}\n\n</details>`;
+            await github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: commentBody
+            })
+
+  CodeScanReport:
+    needs: dockertest  # This job will depend on dockertest job
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Run CodeScanAI Action
+        id: codescan-ai
+        uses: codescan-ai/codescanai-action@v1.0.1
+        env:
+          OPENAI_API_KEY: ${{ secrets.CODESCAN_AUTH_TOKEN }}  # Updated token secret
+        with:
+          provider: "openai"
+          changes_only: true
+          pr_number: ${{ github.event.pull_request.number || 0 }}  # Fallback to 0 if pr_number is unavailable
+          repo: ${{ github.repository }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          output_file: "codescanai_report.txt"
 
