--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -202,6 +202,7 @@ jobs:
 
   CodeScanAI:
     runs-on: ubuntu-latest
+    needs: dockertest  # This job will depend on dockertest job
     permissions:
       contents: read
       pull-requests: write
