--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -221,10 +221,33 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           output_file: "codescanai_report.txt"
 
+      - name: Upload CodeScanAI Report (Artifact)
+        uses: actions/upload-artifact@v3
+        with:
+          name: codescanai-report
+          path: codescanai_report.txt
+
       - name: Convert CodeScanAI Report to SARIF
         run: |
-          echo '{"runs":[{"tool":{"driver":{"name":"CodeScanAI"}},"results":[{"message":{"text":"AI code scan results."}}]}]}' > codescanai_report.sarif
+          echo '{
+            "version": "2.1.0",
+            "runs": [
+              {
+                "tool": { "driver": { "name": "CodeScanAI" } },
+                "results": [
+                  {
+                    "message": { "text": "CodeScanAI results - see report for details." },
+                    "locations": [{ "physicalLocation": { "artifactLocation": { "uri": "codescanai_report.txt" }}}]
+                  }
+                ]
+              }
+            ]
+          }' > codescanai_report.sarif
 
-      
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: codescanai_report.sarif
+        
         
 
